--- a/php/CSS/estilo.css
+++ b/php/CSS/estilo.css
@@ -83,6 +83,10 @@ h6 {
    background-color: #fff;
    border: thin solid #f1f1f1;
    border-radius: 5px;
+   -webkit-border-radius: 5px;
+   -moz-border-radius: 5px;
+   -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
+   -moz-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
 }
 
